updating files with API url removal

--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -129,22 +129,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "id": "e2167ace",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=96b51f624f8c5f9a9de1c8b4edb9b333&q=Boston\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create an endpoint URL for a city.\n",
-    "city_url = url + \"&q=\" + \"Boston\"\n",
-    "print(city_url)"
+    "city_url = url + \"&q=\" + \"Boston\""
    ]
   },
   {
@@ -332,24 +323,6 @@
     "    print(f\"City Weather found.\")\n",
     "else:\n",
     "    print(f\"City weather not found.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "30d77285",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=96b51f624f8c5f9a9de1c8b4edb9b333&q=Boston\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(city_url)"
    ]
   },
   {
